name:                redoak
version:             0.1.0.0
synopsis:            An editor for the future
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Ken Micklas
maintainer:          kmicklas@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

data-dir:            data
data-files:
  style/*.css
  native.html

executable redoak
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  default-extensions:
    LambdaCase,
    ImplicitParams,
    ScopedTypeVariables

  build-depends:
    base >=4.8 && <4.9,
    bytestring,
    containers,
    free,
    ghcjs-dom,
    mtl,
    text,
    transformers

  if impl(ghcjs)
    build-depends:
      ghcjs-base
  else
    build-depends:
      glib,
      webkitgtk3
    other-modules:
      Paths_redoak
