name:                redoak
version:             0.1.0.0
synopsis:            An editor for the future
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Ken Micklas
maintainer:          kmicklas@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

data-dir:            data
data-files:
  style/*.css
  native.html

executable redoak
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  default-extensions: LambdaCase
                    , ImplicitParams
                    , ScopedTypeVariables

  build-depends:      base >=4.9 && <4.10
                    , bifunctors >= 5.1
                    , bytestring
                    , comonad >= 4.2.7.2
                    , constraints >= 0.8
                    , containers
                    , free
                    , ghcjs-dom
                    , lens >= 4.13
                    , mono-traversable >= 0.10
                    , mtl
                    , parsec
                    , reflex
                    , reflex-dom
                    , semigroups >= 0.18.1
                    , text
                    , transformers

  if impl(ghcjs)
    build-depends:    ghcjs-base
  else
    build-depends:    glib
                    , webkitgtk3
    other-modules:    Paths_redoak
